pkg/workloads/v4l2rtspserver/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rtsp0
  namespace: v4l2rtspserver
  labels:
    app: rtsp0
spec:
  selector:
    app: rtsp0
  ports:
  - name: rtsp-tcp
    nodePort: 30556
    port: 8556
    targetPort: rtsp-tcp
    protocol: TCP
  - name: rtsp-udp
    nodePort: 30555
    port: 8555
    targetPort: rtsp-udp
    protocol: UDP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: rtsp0-hls
  namespace: v4l2rtspserver
  labels:
    app: rtsp0
spec:
  selector:
    app: rtsp0
  ports:
  - name: hls
    port: 8086
    targetPort: rtsp-http
  type: LoadBalancer
